# camera_lidar_calibration

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package.xml
config/: camera_extrinsic_calibration.yaml  camera_intrinsic_calibration.yaml  general.yaml  params.yaml
include/camera_lidar_calibration/: node.hpp
include/extrinsic_calibration_by_hand_cpp/: node.hpp
launch/: calibration.launch.py  camera_lidar.launch.py
src/: main.cpp  node.cpp
